_sass/forest/_layout.scss
/* ... */
.wayfinding-results {
  padding-left: $spacing-unit/2;
  .li-date {
    font-family: $title-font-family;
  }
}
.wayfinding-section {
  display: none;
  &:target, &.chosen {
    display: block;
    position: sticky;
    top: 0;
  }
  &.chosen ~ .wayfinding-section:target {
    display: none;
  }
}
h2.opener {
  font-family: $title-font-family;
  margin: 0;
  text-align: center;
  cursor: pointer;
  color: $pale-pop-color;
  text-shadow: 1px 1px rgba(0,0,0,.5);
  position: relative;
  z-index: 1;
  span {
    background-color: $brand-color-dark;
    padding: 0 8px;
    border-radius: 6px;
    box-shadow: 0 1px 4px 2px #000;
  }
  &:before {
    border-top: $green-border-thin;
    content:"";
    margin: 0 auto;
    position: absolute;
    top: 50%; left: 0; right: 0; bottom: 0;
    width: 100%;
    z-index: -1;
  }
}
.calendar.closed {
  display: none;
}

ul.calendar {
  margin: 15px 5px 10px 5px;
  position: relative;
  height: 10em;
}
ul.calendar li {
  display: inline-block;
  width: 31%;
  position: absolute;
  text-transform: uppercase;
  text-align: center;
  background-color: $text-background-color-dark;
  font-family: $title-font-family;
  a {
    color: $pale-pop-color;
  }
}
li.nov, li.aug, li.may, li.feb {
  left: 34.5%;
}
li.mar, li.jun, li.sep, li.dec {
  left: 69%;
}

li.apr, li.may, li.jun {
  top: 25%;
}

li.jul, li.aug, li.sep {
  top: 50%;
}

li.oct,li.nov,li.dec {
  top: 75%;
}

/**
 * Some leftovers that need tidying up
 */

.post-content {
  padding-bottom: $spacing-unit;

  h2 {
    clear: both;
    font-size: 21px;

    @include media-query($on-tablet) {
      font-size: 19px;
    }
  }

  h3 {
    clear: both;
    font-size: 16px;

    @include media-query($on-tablet) {
      font-size: 14.5px;
    }
  }

  h4 {
    clear: both;
    font-size: 16px;
    font-weight: $base-font-weight;
    font-style: italic;
    em { font-style: normal; }

    @include media-query($on-tablet) {
      font-size: 14.5px;
    }
  }

  h5 {
    clear: both;
    font-size: 14px;
    letter-spacing: 1.5px;

    @include media-query($on-tablet) {
      font-size: 12.5px;
    }
  }

  h6 {
    clear: both;
    font-size: 14px;
    font-feature-settings: "smcp" 1;

    @include media-query($on-tablet) {
      font-size: 14.5px;
    }
  }
}

/**
 * Miscellany
 */

hr.visible {
  border: none;
  border-top: $green-border-thin;
  margin: $spacing-unit/2 $spacing-unit;
}
ul.inline-list {
  margin-left: 0;
  li {
    display: inline;
    & + li:before {
      content: " · ";
    }
  }
}
ul.dated-list {
  margin-left: $spacing-unit/2;
  text-indent: -$spacing-unit/2;
  li { 
    display: block;
  }
  .li-date {
    color: $grey-color;
    &:after {
      content: " | ";
    }
  }
}
.button {
  display: inline-block;
  background-color: $text-background-color-dark;
  border: none;
  padding: 5px 10px;
  border-radius: 6px;
  box-shadow: -1px 1px 2px #000;
  border: $green-border-thin;
  color: $pale-pop-color;
  cursor: pointer;
  font-family: $title-font-family;
  &.button-compact {
    padding: 2px 8px;
  }
}
.gloss {
  margin: $spacing-unit/3 auto;
  line-height: 1.2;
  td {
    padding: 0 4px;
  }
}

.audio-button {
  cursor: pointer;
  position: relative;
  bottom: 2px;
  margin: 0 3px;
  img {
    width: 15px;
  }
}

.poem ul {
  list-style: none outside;
  padding-left: 0;
  margin-left: $spacing-unit / 2;
  li, li li {
    text-indent: -$spacing-unit / 2;
  }
  ul {
    margin-top: 0;
  }
  + ul {
    margin-top: 1.4em;
  }
}

/**
 * _includes/fig.html
 */
.image-fig {
  clear: both;
  display: table;
  padding: 2px;
  margin: $spacing-unit/3 auto;
  border: $green-border-thin;
  background-color: $text-background-color-med;
  > a {
    display: block;
    position: relative; 
  }
  figcaption {
    display: table-caption;
    caption-side: bottom;
    padding: $spacing-unit/6 $spacing-unit/4;
    border: $green-border-thin;
    border-top: 0;
    margin-top: -1px;
    background-color: $text-background-color-med;
  }
  &.topcaption figcaption {
    caption-side: top;
    margin-top: 0;
    margin-bottom: -1px;
    border-top: inherit;
    border-bottom: 0;
  }
  &.white img {
    background-color: #fff;
  }
  &.left, &.right {
    width: 50%;
  }
  &.left {
    float: left;
    margin: 0 15px 10px 0;
  }
  &.right {
    float: right;
    margin: 0 0 10px 15px;
  }
}
.image-fig-positioning + .image-fig-positioning {
    margin-top: $spacing-unit;
    }

/* having this little overlay turned out to be annoying
.image-fig a:after {
  content: "";
  position: absolute;
  top: 1em;
  right: 1em;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  text-align: center;
  background: url(/assets/svg/plus.svg);
  background-position: 50%;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0.7);
}*/

